[gd_scene load_steps=42 format=2]

[ext_resource path="res://textures/sprites/player/combat.png" type="Texture" id=1]
[ext_resource path="res://textures/sprites/enemies/horrorsus.png" type="Texture" id=2]
[ext_resource path="res://textures/fonts/Cave-Story.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://scenes/game/combat/CombatScene.gd" type="Script" id=4]
[ext_resource path="res://textures/sprites/player/combatsprite.png" type="Texture" id=5]
[ext_resource path="res://textures/ui/combat/scan_crosshair.png" type="Texture" id=6]
[ext_resource path="res://textures/sprites/player/ports/portIsaac.png" type="Texture" id=7]
[ext_resource path="res://textures/sprites/player/mainc_sheet.png" type="Texture" id=8]
[ext_resource path="res://sound/soundFX/combat_intro.wav" type="AudioStream" id=9]
[ext_resource path="res://sound/soundFX/battle.wav" type="AudioStream" id=10]
[ext_resource path="res://sound/soundFX/beep.wav" type="AudioStream" id=11]
[ext_resource path="res://sound/soundtrack/Encounter.wav" type="AudioStream" id=13]
[ext_resource path="res://textures/ui/combat/attack_icon.png" type="Texture" id=14]
[ext_resource path="res://textures/ui/combat/item_icon.png" type="Texture" id=15]
[ext_resource path="res://textures/ui/combat/run_icon.png" type="Texture" id=16]
[ext_resource path="res://textures/ui/combat/pixil-frame-0.png" type="Texture" id=17]

[sub_resource type="Environment" id=1]
background_mode = 1
background_color = Color( 0.309804, 0, 0, 1 )
ambient_light_color = Color( 1, 1, 1, 1 )

[sub_resource type="Animation" id=2]
resource_name = "flash"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:environment:background_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.309804, 0, 0, 1 ), Color( 0.137255, 0.00392157, 0.00392157, 1 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.9
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.8, 1.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 49.6776, -12.5062, -9.59847 ), Vector3( 11.7997, -8.23008, -1.69416 ), Vector3( -7.21571, -8.11974, 1.02665 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Enemy:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.6, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0, 1 ), Color( 0, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../UI/EnemyHPBar:rect_position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1024, 0 ), Vector2( 1024, 0 ), Vector2( 724, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../../UI/MyHPBar:rect_position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -304, 0 ), Vector2( -304, 0 ), Vector2( 40, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("../../UI/VBoxContainer:rect_position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 2.5, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 600 ), Vector2( 0, 600 ), Vector2( 0, 500 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Player:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, false, true ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("../PlayerN:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 2.2, 2.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("../../sound3:playing")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("../../sound2:playing")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("../../sound1:playing")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="CylinderMesh" id=4]
top_radius = 10.0
bottom_radius = 10.0
height = 0.1

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.309804, 0, 0, 1 )

[sub_resource type="Animation" id=6]
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ Rect2( 2.024, 0, 96, 71.908 ), Rect2( 3.654, 83.545, 96, 65.31 ) ]
}

[sub_resource type="Animation" id=7]
tracks/0/type = "value"
tracks/0/path = NodePath(".:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.3, 0.7, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 1.84717, 0 ), Vector3( 3.329, 1.847, 0 ), Vector3( 3.329, 1.847, 0 ), Vector3( 0, 1.84717, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../Enemy:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 6.43162, 2, 0.495568 ), Vector3( 6.43162, 2, 0.495568 ), Vector3( 6.886, 2, 0.496 ), Vector3( 6.528, 2, 0.496 ), Vector3( 6.633, 2, 0.496 ), Vector3( 6.43162, 2, 0.495568 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("../../UI/DMGNumber:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ false, true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3, 0.5, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 0 ]
}

[sub_resource type="DynamicFont" id=8]
size = 60
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.686275, 0, 0, 1 )

[sub_resource type="DynamicFont" id=10]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0.623529, 0.0470588, 1 )

[sub_resource type="DynamicFont" id=12]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=13]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=14]
size = 30
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=15]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=16]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=17]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 3 )

[sub_resource type="RectangleShape2D" id=19]
extents = Vector2( 10, 12 )

[sub_resource type="Animation" id=20]
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=21]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("..:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 362, 150 ), Vector2( 350, 155 ), Vector2( 340, 170 ), Vector2( 355, 155 ), Vector2( 362, 150 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 0.27451, 0.27451, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:color")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.34902, 1, 0.27451, 1 ) ]
}

[sub_resource type="DynamicFont" id=23]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=24]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=25]
resource_name = "modulate"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../UI/MinigamePopup:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="CombatScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="background" type="AnimationPlayer" parent="WorldEnvironment"]
anims/flash = SubResource( 2 )

[node name="CombatField" type="Spatial" parent="."]

[node name="Camera" type="Camera" parent="CombatField"]
transform = Transform( 0.988134, 0.00538794, -0.153498, -0.0729911, 0.895795, -0.438433, 0.13514, 0.444434, 0.88556, 2.64829, 2.93997, 5.63354 )
current = true

[node name="Intro" type="AnimationPlayer" parent="CombatField/Camera"]
autoplay = "transition"
anims/transition = SubResource( 3 )

[node name="Floor" type="MeshInstance" parent="CombatField"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3.86366, 0, -3.93188 )
mesh = SubResource( 4 )
material/0 = SubResource( 5 )

[node name="Enemy" type="Sprite3D" parent="CombatField"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6.43162, 2, 0.495568 )
modulate = Color( 0, 0, 0, 1 )
pixel_size = 0.05
billboard = 2
shaded = true
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 2.024, 0, 96, 71.908 )

[node name="idle" type="AnimationPlayer" parent="CombatField/Enemy"]
autoplay = "idle"
anims/idle = SubResource( 6 )

[node name="Player" type="Sprite3D" parent="CombatField"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.84717, 0 )
visible = false
billboard = 2
texture = ExtResource( 1 )
hframes = 3
region_rect = Rect2( 12.424, 14.279, 40, 77 )

[node name="Attack" type="AnimationPlayer" parent="CombatField/Player"]
anims/attack = SubResource( 7 )

[node name="PlayerN" type="Sprite3D" parent="CombatField"]
transform = Transform( 4, 0, 0, 0, 4, 0, 0, 0, 4, 0, 1.78914, 0 )
billboard = 2
texture = ExtResource( 8 )
vframes = 4
hframes = 5
frame = 5

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false,
"_editor_description_": ""
}

[node name="DMGNumber" type="RichTextLabel" parent="UI"]
visible = false
margin_left = 808.0
margin_top = 208.0
margin_right = 912.0
margin_bottom = 248.0
custom_fonts/normal_font = SubResource( 8 )
bbcode_enabled = true
bbcode_text = "[shake]20!"
text = "20!"

[node name="EnemyHPBar" type="ProgressBar" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_right = 300.001
margin_bottom = 50.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 50 )
custom_styles/fg = SubResource( 9 )
custom_fonts/font = SubResource( 10 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MyHPBar" type="ProgressBar" parent="UI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -1328.0
margin_right = -1028.0
margin_bottom = 50.0
grow_horizontal = 0
rect_min_size = Vector2( 300, 50 )
custom_styles/fg = SubResource( 11 )
custom_fonts/font = SubResource( 12 )
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Isaac" type="Sprite" parent="UI/MyHPBar"]
position = Vector2( 0, 48 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 7 )
hframes = 2

[node name="ItemsContainer" type="HBoxContainer" parent="UI"]
visible = false
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 160.0
margin_top = -168.0
margin_right = -16.0
margin_bottom = -68.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealButton" type="Button" parent="UI/ItemsContainer"]
margin_right = 200.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 13 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0.458824, 0.823529, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0, 0.803922, 1 )
text = "Bandages (+ 20HP)"
flat = true

[node name="BoostButton" type="Button" parent="UI/ItemsContainer"]
margin_left = 204.0
margin_right = 456.0
margin_bottom = 100.0
rect_min_size = Vector2( 200, 100 )
custom_fonts/font = SubResource( 14 )
custom_colors/font_color = Color( 0, 0.458824, 0.823529, 1 )
custom_colors/font_color_hover = Color( 0.0235294, 0, 0.803922, 1 )
text = "Energy Drink (+50% ATK)"
flat = true

[node name="VBoxContainer" type="HBoxContainer" parent="UI"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1.0
margin_bottom = 100.0
grow_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AttackButton" type="Button" parent="UI/VBoxContainer"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 250.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 15 )
custom_colors/font_color_hover = Color( 0.45098, 0, 0, 1 )
text = "ATTACK"
icon = ExtResource( 14 )

[node name="ItemButton" type="Button" parent="UI/VBoxContainer"]
modulate = Color( 0.254902, 0.341176, 0.796078, 1 )
margin_left = 254.0
margin_right = 504.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 16 )
custom_colors/font_color_hover = Color( 0.211765, 0.431373, 0.760784, 1 )
text = "ITEM"
icon = ExtResource( 15 )

[node name="ScanButton" type="Button" parent="UI/VBoxContainer"]
modulate = Color( 0.2, 0.745098, 0.0941176, 1 )
margin_left = 508.0
margin_right = 758.0
margin_bottom = 100.0
rect_min_size = Vector2( 250, 100 )
custom_fonts/font = SubResource( 17 )
custom_colors/font_color_hover = Color( 0.0745098, 0.619608, 0.192157, 1 )
text = "SCAN"
icon = ExtResource( 6 )

[node name="RunButton" type="Button" parent="UI/VBoxContainer"]
modulate = Color( 0.631373, 0, 0.384314, 1 )
margin_left = 762.0
margin_right = 1023.4
margin_bottom = 100.0
rect_min_size = Vector2( 261.399, 100 )
custom_fonts/font = SubResource( 18 )
custom_colors/font_color_hover = Color( 0.745098, 0.117647, 0.482353, 1 )
text = "RUN"
icon = ExtResource( 16 )

[node name="MinigamePopup" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="UI/MinigamePopup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -150.0
margin_right = 150.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 300 )
color = Color( 0.0784314, 0.0784314, 0.0784314, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/MinigamePopup/Bg"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="UI/MinigamePopup/Bg/HBoxContainer"]
margin_right = 97.0
margin_bottom = 300.0
size_flags_horizontal = 3
color = Color( 0.196078, 0.121569, 0.121569, 1 )

[node name="ColorRect2" type="ColorRect" parent="UI/MinigamePopup/Bg/HBoxContainer"]
margin_left = 101.0
margin_right = 198.0
margin_bottom = 300.0
size_flags_horizontal = 3
color = Color( 0.196078, 0.121569, 0.121569, 1 )

[node name="ColorRect3" type="ColorRect" parent="UI/MinigamePopup/Bg/HBoxContainer"]
margin_left = 202.0
margin_right = 300.0
margin_bottom = 300.0
size_flags_horizontal = 3
color = Color( 0.196078, 0.121569, 0.121569, 1 )

[node name="Player" type="Sprite" parent="UI/MinigamePopup/Bg"]
position = Vector2( 150, 250 )
scale = Vector2( 2, 2 )
texture = ExtResource( 5 )
vframes = 2
hframes = 3

[node name="PlayerBody" type="StaticBody2D" parent="UI/MinigamePopup/Bg/Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="UI/MinigamePopup/Bg/Player/PlayerBody"]
shape = SubResource( 19 )

[node name="OrbContainer" type="Node2D" parent="UI/MinigamePopup/Bg"]

[node name="HitRect" type="ColorRect" parent="UI/MinigamePopup/Bg"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitAnim" type="AnimationPlayer" parent="UI/MinigamePopup/Bg/HitRect"]
anims/hit = SubResource( 20 )

[node name="ScangamePopup" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.682353 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg" type="ColorRect" parent="UI/ScangamePopup"]
visible = false
anchor_left = 0.354
anchor_top = 0.25
anchor_right = 0.646
anchor_bottom = 0.75
margin_left = -0.496002
margin_right = 0.495972
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 300, 300 )
color = Color( 0.101961, 0.101961, 0.101961, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HitRect" type="ColorRect" parent="UI/ScangamePopup/Bg"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 1, 0.27451, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScanAnim" type="AnimationPlayer" parent="UI/ScangamePopup/Bg/HitRect"]
anims/failed = SubResource( 21 )
anims/scanned = SubResource( 22 )

[node name="LineH" type="Line2D" parent="UI/ScangamePopup/Bg"]
visible = false
points = PoolVector2Array( 0, 0, 300, 0 )
width = 5.0
default_color = Color( 0.4, 1, 0.407843, 1 )

[node name="LineV" type="Line2D" parent="UI/ScangamePopup/Bg"]
visible = false
points = PoolVector2Array( 0, 0, 0, 300 )
width = 5.0
default_color = Color( 0.4, 1, 0.407843, 1 )

[node name="ScanStopButton" type="Button" parent="UI/ScangamePopup/Bg"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScanTween" type="Tween" parent="UI/ScangamePopup/Bg"]
repeat = true
playback_process_mode = 0
playback/repeat = true

[node name="ScanCrosshair" type="Sprite" parent="UI/ScangamePopup/Bg"]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( -5, -3 )
scale = Vector2( 0.84375, 0.90625 )
texture = ExtResource( 6 )

[node name="scan_result" type="Label" parent="UI/ScangamePopup"]
visible = false
anchor_left = 0.312
anchor_top = 0.257
anchor_right = 0.687
anchor_bottom = 0.748
margin_left = 0.511993
margin_top = -0.199997
margin_right = 0.511963
margin_bottom = 0.199982
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 1, 0.937255, 0, 1 )
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/ScangamePopup/scan_result"]
anchor_left = 0.248
anchor_top = 0.8
anchor_right = 0.746
anchor_bottom = 0.96
margin_left = -0.0261765
margin_top = 0.0628967
margin_right = 0.0718079
margin_bottom = -0.137115
custom_fonts/font = SubResource( 24 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_hover = Color( 0.533333, 0.533333, 0.533333, 1 )
custom_colors/font_color_pressed = Color( 0.211765, 0.211765, 0.211765, 1 )
text = "Continue"
flat = true

[node name="warning" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 768, 384 )
scale = Vector2( 1.3225, 1.2625 )
texture = ExtResource( 17 )

[node name="blip" type="AnimationPlayer" parent="warning"]
anims/modulate = SubResource( 25 )

[node name="sound1" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = 1.0

[node name="sound2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="sound3" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="Soundtrack" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -2.0
[connection signal="animation_finished" from="CombatField/Camera/Intro" to="." method="_on_Intro_animation_finished"]
[connection signal="animation_finished" from="CombatField/Player/Attack" to="." method="_on_Attack_animation_finished"]
[connection signal="pressed" from="UI/VBoxContainer/AttackButton" to="." method="_on_AttackButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ItemButton" to="." method="_on_ItemButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/ScanButton" to="." method="_on_ScanButton_pressed"]
[connection signal="pressed" from="UI/VBoxContainer/RunButton" to="." method="_on_RunButton_pressed"]
[connection signal="visibility_changed" from="UI/ScangamePopup" to="." method="_on_ScangamePopup_visibility_changed"]
[connection signal="animation_finished" from="UI/ScangamePopup/Bg/HitRect/ScanAnim" to="." method="_on_ScanAnim_animation_finished"]
[connection signal="button_down" from="UI/ScangamePopup/Bg/ScanStopButton" to="." method="_on_ScanStopButton_button_down"]
[connection signal="tween_completed" from="UI/ScangamePopup/Bg/ScanTween" to="." method="_on_ScanTween_tween_completed"]
[connection signal="pressed" from="UI/ScangamePopup/scan_result/Button" to="." method="_on_Button_pressed"]
[connection signal="animation_finished" from="warning/blip" to="." method="_on_blip_animation_finished"]
